ncmpc 0.50 - not yet released
* build: require Meson 0.60
* require libfmt 9
* draw progress bar as Unicode double line
* add color style "text" for input text controls
* remove option "text-editor-ask"
* fix lyrics editor crash
* lyrics/musixmatch: add new lyrics extension
* lyrics/google: fix partial loading of lyrics
* support MPD 0.22 tag "label" (requires libmpdclient 2.17)
* fix config file overriding MPD_HOST environment variable

ncmpc 0.49 - (2023-08-04)
* fix UI freeze if lyrics plugin is stuck
* fix missing tags with libmpdclient 2.21
* fix build failure on macOS

ncmpc 0.48 - (2023-04-06)
* drop support for ~/.ncmpc/; using only ~/.config/ncmpc/ (XDG)
* improve scroll-offset handling
* experimental table layout

ncmpc 0.47 - (2022-06-30)
* handle Ctrl-C in search prompt
* link with libintl and libiconv if necessary
* require libmpdclient 2.16 or newer
* require MPD 0.21 or newer
* switch to C++20

ncmpc 0.46 - (2021-11-26)
* eliminate Boost dependency
* install Lithuanian translation
* migrate to PCRE2

ncmpc 0.45 - (2021-02-12)
* make "tagtypes" errors non-fatal
* check which tag types are supported by MPD (fixes MPD 0.21 support)
* lyrics: update page title after loading has finished
* lyrics: fix path injection bug
* lyrics: load cached lyrics without plugin
* lyrics: use $XDG_CACHE_HOME/ncmpc/lyrics instead of ~/.lyrics
* lyrics/azlyrics: normalize accented letters (using the "unidecode" library)
* lyrics/azlyrics: unescape HTML entities

ncmpc 0.44 - (2021-02-01)
* fix scrolling problems on help page
* highlight find results on help page
* don't attempt IPv6 connection if IPv6 routing is disabled

ncmpc 0.43 - (2021-01-27)
* support MPD 0.22 tags "conductor", "work", "grouping" (requires
  libmpdclient 2.17)
* show "conductor" and "work" on song page
* playlist editor (work in progress)
* file page: handle mouse double clicks
* fix crash bug
* fix build failure on macOS
* add azlyrics plugin

ncmpc 0.42 - (2020-10-28)