@@ -66,6 +66,9 @@
 #lyrics-timeout = 60
 
 ############## Display ######################
+## Show a title bar at the top of the screen
+#show-title-bar = yes
+
 ## Show a list of the screens in the top line.
 #welcome-screen-list = yes
 
